// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> should display university list 1`] = `
.c0 {
  max-width: 100%;
  margin: auto;
  padding: 16px;
}

.c5 {
  outline: none;
  padding: 8px;
  border-radius: 6px;
  border: 2px solid #dee2e6;
}

.c3 {
  position: absolute;
  top: 10px;
  left: 10px;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  padding-left: 32px;
}

.c7 {
  -webkit-animation: cqkDSr 2.625s linear infinite;
  animation: cqkDSr 2.625s linear infinite;
  height: 32px;
  width: 32px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.c8 {
  -webkit-animation: caVMmK 1.5s ease-in-out infinite;
  animation: caVMmK 1.5s ease-in-out infinite;
  stroke: #007bff;
  stroke-linecap: round;
}

.c6 {
  text-align: center;
  padding: 32px 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:576px) {
  .c0 {
    max-width: 576px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 768px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 992px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <form>
      <div
        class="c2"
      >
        <svg
          class="c3"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <input
          class="c4 c5"
          placeholder="Search universities"
        />
      </div>
    </form>
  </div>
  <div
    class="c6"
  >
    <svg
      class="c7"
      viewBox="-24 -24 48 48"
    >
      <circle
        class="c8"
        cx="0"
        cy="0"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`<HomePage /> should display welcome message when searchTerm is empty 1`] = `
.c0 {
  max-width: 100%;
  margin: auto;
  padding: 16px;
}

.c5 {
  outline: none;
  padding: 8px;
  border-radius: 6px;
  border: 2px solid #dee2e6;
}

.c3 {
  position: absolute;
  top: 10px;
  left: 10px;
}

.c2 {
  position: relative;
}

.c2 .c4 {
  padding-left: 32px;
}

.c6 {
  padding: 16px;
  box-shadow: 0 0 4px rgba(0,0,0,.125);
}

.c7 {
  font-size: 32px;
  color: #dee2e6;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:576px) {
  .c0 {
    max-width: 576px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 768px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 992px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <form>
      <div
        class="c2"
      >
        <svg
          class="c3"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <input
          class="c4 c5"
          placeholder="Search universities"
        />
      </div>
    </form>
  </div>
  <div>
    <h2>
      Welcome to university list app.
    </h2>
    <div
      class="c6"
    >
      <div>
        <div
          class="c7"
        >
          To find your universities by name, enter the keyword to the search box above
        </div>
      </div>
    </div>
  </div>
</div>
`;
